--- a/src/app/recoveryProcess/components/personal-data-form/personal-data-form.component.html
+++ b/src/app/recoveryProcess/components/personal-data-form/personal-data-form.component.html
@@ -1,23 +1,23 @@
 <!-- components/personal-data-form/personal-data-form.component.html -->
-
 <div class="border border-gray-200 rounded-lg p-8">
-  <h3 class="text-lg font-medium text-gray-800 mb-6">Información básica</h3>
-
+  <h3 class="text-lg font-medium text-gray-800 mb-6">Basic Information</h3>
   <form [formGroup]="personalDataForm" (ngSubmit)="onSubmit()">
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      <!-- Company Input -->
       <div>
-        <label for="empresa" class="block text-sm font-medium mb-2">Empresa</label>
+        <label for="empresa" class="block text-sm font-medium mb-2">Company</label>
         <input
           type="text"
           id="empresa"
           formControlName="empresa"
-          placeholder="Boletos de Autobús"
+          placeholder="Bus Tickets"
           class="w-full px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring-1 focus:ring-amber-500 focus:border-amber-500"
         >
       </div>
 
+      <!-- Client RFC Input -->
       <div>
-        <label for="rfcCliente" class="block text-sm font-medium mb-2">RFC del cliente</label>
+        <label for="rfcCliente" class="block text-sm font-medium mb-2">Client RFC</label>
         <input
           type="text"
           id="rfcCliente"
@@ -27,8 +27,9 @@
         >
       </div>
 
+      <!-- Guide Number Input -->
       <div>
-        <label for="numeroGuia" class="block text-sm font-medium mb-2">Número de Guía</label>
+        <label for="numeroGuia" class="block text-sm font-medium mb-2">Guide Number</label>
         <div class="relative">
           <input
             type="text"
@@ -40,6 +41,7 @@
         </div>
       </div>
 
+      <!-- Token Input -->
       <div>
         <label for="token" class="block text-sm font-medium mb-2">Token</label>
         <input
@@ -52,8 +54,13 @@
       </div>
     </div>
 
+    <!-- Submit Button -->
     <div class="flex justify-end mt-8">
-      <button type="submit" class="bg-orange-500 text-white font-medium py-2 px-8 rounded hover:bg-orange-600 transition duration-300 ease-in-out">Buscar</button>
+      <button
+        type="submit"
+        class="bg-orange-500 text-white font-medium py-2 px-8 rounded hover:bg-orange-600 transition duration-300 ease-in-out">
+        Search
+      </button>
     </div>
   </form>
 </div>
