delete problem in upload-fiscal

--- a/src/app/proccess-bill/components/upload-fiscal/upload-fiscal.component.html
+++ b/src/app/proccess-bill/components/upload-fiscal/upload-fiscal.component.html
@@ -4,7 +4,7 @@
 
   <div class="text-base font-medium mb-3">Constancia de Situacion Fiscal</div>
 
-  <!-- Area to drag and drop files --> !
+  <!-- Area to drag and drop files -->
   <div
     class="border border-[#DCDCDC] rounded-lg min-h-[265px] flex items-center justify-center cursor-pointer relative overflow-hidden transition-all duration-300 bg-white mb-3"
     [ngClass]="{'border-2 border-dashed bg-blue-50': isDragging}"
